--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -538,14 +538,13 @@ sources:
     mapzen:
         # EraserMaps the app only supports MVT format tiles
         type:  MVT #TopoJSON
-        #url:  http://vector.dev.mapzen.com/osm/all/{z}/{x}/{y}.mvt
+        #url:  http://tile.dev.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.mvt
         url:  https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.mvt
         #enforce_winding: true  #because Tangram v0.4 and tiles v0.5-pre don't play nice
-        #url:  //localhost:8080/osm/all/{z}/{x}/{y}.mvt
-        #url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.mvt
+        #url:  //localhost:8080/vector/all/{z}/{x}/{y}.mvt
         # road labels in Tangram JS are broken when overzooming, set max_zoom: 18 to preview fix
-        #url_params:
-#            api_key: vector-tiles-P6dkVl4
+        url_params:
+            api_key: vector-tiles-7bfyfz8
         max_zoom: 16
 
 #    # Only enable this for local debug, should not be enabled for prod (app inserts these at runtime)
