--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -543,8 +543,8 @@ sources:
         #enforce_winding: true  #because Tangram v0.4 and tiles v0.5-pre don't play nice
         #url:  //localhost:8080/vector/all/{z}/{x}/{y}.mvt
         # road labels in Tangram JS are broken when overzooming, set max_zoom: 18 to preview fix
-        url_params:
-            api_key: vector-tiles-7bfyfz8
+        # url_params:
+        #    api_key: vector-tiles-7bfyfz8
         max_zoom: 16
 
 #    # Only enable this for local debug, should not be enabled for prod (app inserts these at runtime)
