--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -2556,13 +2556,13 @@ layers:
                     priority: 58
                     # Size is specified below, and limited to 5 char in another filter
                     repeat_group: shields
-                    repeat_distance: 60px
+                    repeat_distance: 30px
                     placement: midpoint
                     placement_min_length_ratio:
                         - [8, 0.1]
                         - [9, 0.25]
-                        - [10, 0.5]
-                        - [11, 1]
+                        - [10, 0.25]
+                        - [11, 0.15]
                         - [12, 1]
                         - [13, 1.50]
                         - [14, 2.0]
@@ -2570,6 +2570,7 @@ layers:
                     visible: false
                     text:
                         offset: [0px, -0.5px]
+                        repeat_distance: 200px
                         anchor: center
                         text_source: |
                             function() { 
@@ -2843,7 +2844,7 @@ layers:
                                     fill: [0.308,0.308,0.308]
                                     size: [[7,7px],[13,9px],[15,10px]]
                     motorway:
-                        filter: { kind_detail: [motorway], $zoom: [7,8,9] }
+                        filter: { kind_detail: [motorway], $zoom: [7,8] }
                         draw:
                             icons:
                                 visible: global.text_visible_shields
@@ -2853,7 +2854,7 @@ layers:
                             icons:
                                 visible: global.text_visible_shields
                     primary:
-                        filter: { kind_detail: primary, $zoom: [10] }
+                        filter: { kind_detail: primary, $zoom: [10,11] }
                         draw:
                             icons:
                                 visible: global.text_visible_shields
@@ -3018,7 +3019,7 @@ layers:
                         filter: function() { return (feature.shield_text.length === 2) }
                         draw:
                             icons:
-                                size: [[6,[16px,14px]],[13,[18px,16px]],[15,[22px,18px]]]
+                                size: [[6,[16px,14px]],[13,[18px,15px]],[15,[22px,18px]]]
                     width_3char:
                         filter: function() { return (feature.shield_text.length === 3) }
                         draw:
@@ -3987,6 +3988,7 @@ layers:
                     #collide: false
                     text:
                         interactive: true
+                        buffer: 3px
                         # debug testing
                         #collide: false
 
